--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,18 @@
   </properties>
 
   <dependencies>
-    <!-- JUnit 5 -->
+    <!-- JUnit 5 API -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>${junit.jupiter.version}</version>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.9.3</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- JUnit 5 Engine -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.9.3</version>
       <scope>test</scope>
     </dependency>
     <!-- Mockito -->
